==> apache/nuttx/arch/arm/src/samv7/sam_adc.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <fcntl.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/signal.h>
#include <nuttx/fs/fs.h>
#include <nuttx/analog/adc.h>
#include <nuttx/analog/ioctl.h>
#include <nuttx/kmalloc.h>
#include "../../include/samv7/sam_adc.h"
#include "arm_arch.h"
#include "sam_adc.h"
#include "sam_periphclks.h"
#include <arch/board/board.h>

static int sam_adc_bind(FAR struct adc_dev_s *dev,
                        FAR const struct adc_callback_s *callback)
{
  struct sam_adc_priv *priv = (struct sam_adc_priv *)dev->ad_priv;
  priv->adc_callback = callback;
  return 0;
}

static int sam_adc_setup(FAR struct adc_dev_s *dev)
{
  uint8_t regval;
  struct sam_adc_priv *priv = (struct sam_adc_priv *)dev->ad_priv;

  priv->cur_channel = 0;

  /* Enable ADC */
  putreg32(AFEC_CR_START, SAM_AFEC0_CR);
  putreg32(AFEC_CR_START, SAM_AFEC1_CR);

  return 0;
}

static void sam_adc_shutdown(FAR struct adc_dev_s *dev)
{
  /* Disable ADC */
  putreg32(0, SAM_AFEC0_CR);
  putreg32(0, SAM_AFEC1_CR);
}

static void sam_adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  struct sam_adc_priv *priv = (struct sam_adc_priv *)dev->ad_priv;

  if (enable)
    {
      priv->cur_channel = 0;
      putreg32(AFEC_INT_DRDY, SAM_AFEC0_IER);
      putreg32(AFEC_INT_DRDY, SAM_AFEC1_IER);
    }
  else
    {
	  putreg32(0, SAM_AFEC0_IER);
	  putreg32(0, SAM_AFEC1_IER);
    }
}

static int sam_adc_ioctl(FAR struct adc_dev_s *dev,
                         int cmd, unsigned long arg)
{
  int ret = 0;
  struct sam_adc_priv    *priv = (struct sam_adc_priv *)dev->ad_priv;
  struct sam_adc_param_s *params = (struct sam_adc_param_s *)arg;

  switch (cmd)
    {
      case ANIOC_GET_NCHANNELS:
        {
          /* Return the number of configured channels */

          ret = priv->num_channels;
        }
        break;
      case ANIOC_TRIGGER:
		  {
			  /* to be implemented */
			  break;
		  }
    }

  return ret;
}

struct adc_dev_s *sam_adcinitialize(int genclk)
{
  irqstate_t flags;
  uint32_t regval;
  int ret;
  int ch_pos = 0;

  struct sam_adc_priv *priv = (struct sam_adc_priv *)
                              kmm_malloc(sizeof(struct sam_adc_priv));
  priv->genclk = genclk;

  g_sam_adc_dev.ad_priv = priv;
  g_sam_adc_dev.ad_ops = &sam_adc_ops;

  priv->num_channels = 5;//BOARD_ADC_NUM_CHANNELS;

  sam_adc_init_clock(&g_sam_adc_dev);

  /* disable writeproteciton of afec registers */
  putreg32(AFEC_WPMR_WPKEY, SAM_AFEC0_WPMR);
  putreg32(AFEC_WPMR_WPKEY, SAM_AFEC1_WPMR);

  regval = AFEC_MR_TRANSFER(2)|  \
           AFEC_MR_TRACKTIM(15)| \
           AFEC_MR_ONE|          \
           AFEC_MR_FREERUN|      \
           AFEC_MR_STARTUP_0|    \
           AFEC_MR_PRESCAL(0xFF);
  putreg32(regval,SAM_AFEC0_MR);
  putreg32(regval,SAM_AFEC1_MR);

  putreg32(AFEC_EMR_TAG,SAM_AFEC0_EMR);
  putreg32(AFEC_EMR_TAG,SAM_AFEC1_EMR);

  putreg32(AFEC_CH4|AFEC_CH5|AFEC_CH6|AFEC_CH7|AFEC_CH8,SAM_AFEC1_CHER);

  putreg32(AFEC_ACR_PGA0EN|AFEC_ACR_PGA1EN, SAM_AFEC0_ACR);
  putreg32(AFEC_ACR_PGA0EN|AFEC_ACR_PGA1EN, SAM_AFEC1_ACR);

  flags = enter_critical_section();

  /* Attach Interrupt Handler */

  ret = irq_attach(SAM_IRQ_AFEC1, sam_adc_interrupt, &g_sam_adc_dev);
  if (ret < 0)
    {
      aerr("ERROR: Failed to attach irq %d\n", SAM_IRQ_AFEC1);
      leave_critical_section(flags);
      return NULL;
    }

  up_enable_irq(SAM_IRQ_AFEC1);

  leave_critical_section(flags);

  /* enable writeproteciton of afec registers */
  putreg32(AFEC_WPMR_WPKEY | AFEC_WPMR_WPEN, SAM_AFEC0_WPMR);
  putreg32(AFEC_WPMR_WPKEY | AFEC_WPMR_WPEN, SAM_AFEC1_WPMR);




  return (struct adc_dev_s *)&g_sam_adc_dev;
}
